2009-11-18 Richard Frith-Macdonald  <rfm@gnu.org>

	Many tweaks to build under OSX snow leopard.

2009-10-27 Richard Frith-Macdonald  <rfm@gnu.org>

	* ECPG.pgm:
	* MySQL.m:
	* Postgres.m:
	* Oracle.pm:
	* SQLite.m:
	* JDBC.m:
	Don't call -backendConnect or -backendDisconnect ... should be using
	the public API so that notifications are sent properly.

2009-10-01 Richard Frith-Macdonald  <rfm@gnu.org>

	* configure.ac: workaround autoconf bug.
	* configure: regenerate

2009-09-16 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	Add convenience method to convert array of rows into an array of
	columns.

2009-09-08 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	Add method for executing a batch of statements/transactions and
	returning any failed statements/transactions to they can be
	re-done.  Also add methods to manipulate the statements in a
	transaction so we can retry things intelligently.

2008-11-12 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	Add support for tracking the number of consecutive connection failures
	and imposing a delay between connection attempts.
	* JDBC.m: fix typo
	* GNUMmakefile: bump version

2008-07-19  Nicola Pero <nicola.pero@meta-innovation.com>

	* configure.ac: Documented the --with-additional-include=,
	--with-additional-lib=, --with-postgres-dir= and
	--with-jre-architecture= options.
	* configure: Regenerated.
	* config.h.in: Regenerated.
	
2008-03-03 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	* ECPG.pgm:
	* MySQL.m:
	* Postgres.m:
	* SQLite.m:
	* JDBC.m:
	Alter to allow control of both the way records are strored and
	the way they are listed ... so people can make performance
	optimisations.

2008-02-21 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	Experimental new method to set a thread to do all cached
	queries on and to perform asynchronous updates if other